completed first post

--- a/data.html
+++ b/data.html
@@ -6,33 +6,61 @@
 <link rel="shortcut icon" href="/icons/favicon.ico">
 <link href="/style.css" rel="stylesheet" type="text/css" media="all"></head>
 <body><header>
-<logo style="visibility: hidden"><a href="#you-are-here">logo</a></logo>
 <nav>
-<a href="/notes/index#tags">topics</a>&emsp;
-<a href="/notes/index#chronology">notes</a>&emsp;
-<a href="/notes/index#you-are-here">about</a>
+<a href="/index#tags">topics</a>&emsp;
+<a href="/index#chronology">notes</a>&emsp;
+<a href="/index#about">about</a>
 </nav></header><main>
 
 <section id="all"><br><br>
 
-<article id="data-first">
-<h2><a href="#data-first">Data Analytics?</a></h2>
-<margin><a href="#tag-data"><tag>data</tag></a><br>
+<article id="first-post">
+<h2><a href="#first-post">Data Analytics?</a></h2>
+<margin><a href="#tag-meta"><tag>data</tag></a><br>
 <date>23-09-05 15:08</date></margin>
 <p>
 Interested in learning about Data Analytics and Data Science as a potential career projectory. So far, I have a list of bookmarks for courses, but that should probably be a little more formal.</p><p>
 One potential approach is to go the Coursera route, seems like there's two big "specializations" (groups of courses), offered by IBM and Google.</p><p>
 Looks like SQL <a href="https://learnwithlukas.com/roadmap" target="_blank">may be↗&#xFE0E</a> a good next step. Though it looks like that's covered to an extent by those two specializations. I wonder to what extent exactly?</p>
 <p>
+It's beginning to seem clearer to me that at least on the analytics side of things, it's sort of like Python and SQL are musts, Excel is not so much a tool as way of translating existing data knowledge to more relevant tools, and that some visualization and business intelligence curriculum is going to be pretty important. I wonder if there is something like an awesome-data-analytics?
+<margin>
+<a href="https://github.com/newTendermint/awesome-bigdata" target="_blank">eh, sorta.↗&#xFE0E</a><br>
+<a href="https://github.com/academic/awesome-datascience" target="_blank">and kinda.↗&#xFE0E</a>(looks good actually)
+</margin>
+</p> 
+<p>
 Something else that occurs to me (an itch, so to speak) is how to sort of build in a bit of diversity into this so that all of my eggs aren't in one basket. There's a bunch of (seemingly) interesting related tracks, but I'm not really sure which are feasible from a jobs standpoint. How do I get data on that?</p>
- </article>
+<p>
+I've also started this (currently hosted on GitHub pages) site as a way of tracking my process of learning, whatever that may be. Based on the first commits, it may be clear that this site is a copy of a single page template that I've been working on for quite a while. For the time being, this site is very much under construction. 
+</p>
+</article>
+
+<article id="tags">
+<h2><a href="#tags">Tags</a></h2><p>
+<a href="#tag-meta">meta</a><br>
+</p></article>
+
+<article id="chronology">
+<h2><a href="#chronology">
+Chronological (ascending)</a></h2><p>
+<date>23-09-05<br></date><a href="#first-post">Data Analytics?</a></p>
+</article>
+
+<article id="about">
+<h2><a href="#about">
+About</a></h2><p>
+Hi! I'm Ryan.</p><p>
+I'm learning about data analytics and I'm using this website to document my process. Feel free to reach out if you have any questions, or feedback.
+</p>
+</article>
 
 </section>
 
 </main>
 
 <footer>
-<a href="mailto:ryan@tone.support"><img src="/icons/email-feather.svg" alt="contact" style="width:32px; height:32px"></img></a>
+<a href="mailto:ryantkessler@pm.me"><img src="/icons/email-feather.svg" alt="contact" style="width:32px; height:32px"></img></a>
 <a href="https://github.com/diagrammatics"><img src="/icons/github-feather.svg" alt="github" style="width:32px; height:32px"></img></a>
 
 </footer>
