edited header links

--- a/data.html
+++ b/data.html
@@ -7,9 +7,9 @@
 <link href="/style.css" rel="stylesheet" type="text/css" media="all"></head>
 <body><header>
 <nav>
-<a href="/index#tags">topics</a>&emsp;
-<a href="/index#chronology">notes</a>&emsp;
-<a href="/index#about">about</a>
+<a href="/data#tags">topics</a>&emsp;
+<a href="/data#chronology">notes</a>&emsp;
+<a href="/data#about">about</a>
 </nav></header><main>
 
 <section id="all"><br><br>
