--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <front>
 <p>
 now:</p></p><p>
-
+<p>
+learning<a href="/data.html#chronology">data analytics</a></p>
 <p>
 working in audio + video <a href="https://tone.support/">post-production</a></p><p>
 <p>
