added meta tag page

--- a/data.html
+++ b/data.html
@@ -41,6 +41,12 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 <a href="#tag-meta">meta</a><br>
 </p></article>
 
+<article id="tag-meta">
+<h2><a href="#tag-meta">
+tag: meta</a></h2><p>
+<a href="#first-post">Data Analytics?</a><br>
+</p></article>
+
 <article id="chronology">
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
