--- a/data.html
+++ b/data.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="/icons/favicon.ico">
 <link href="/style.css" rel="stylesheet" type="text/css" media="all"></head>
 <body><header>
-<nav>
+<nav><br>
 <a href="/data#tags">topics</a>&emsp;
 <a href="/data#chronology">notes</a>&emsp;
 <a href="/data#about">about</a>
