--- a/data.html
+++ b/data.html
@@ -14,6 +14,48 @@
 
 <section id="all"><br>
 
+<article id="courses">
+<h2><a href="#courses">A Look at Introductory Courses</a></h2>
+<margin><a href="#tag-meta"><tag>data</tag></a><br>
+<date>23-09-06 17:56</date></margin><p>
+So... what to learn? How to go about it? It seems that the spot to start is at the beginning.</p><p>
+Here is a (hand-picked) list of entry-level specializations in Data Analysis on Coursera:</p><p>
+<table>
+<tr>
+<td><a href="https://www.coursera.org/professional-certificates/ibm-data-analyst" target="_blank">
+IBM - Data Analyst Professional Certificate↗&#xFE0E</a></td>
+<td>4 months at 10 hours/week</td>
+<td>Python heavy, Excel, Cognos, SQL</td></tr>
+<tr>
+<td><a href="https://www.coursera.org/professional-certificates/google-data-analytics" target="_blank">
+Google - Data Analytics Professional Certificate↗&#xFE0E</a></td>
+<td>6 months at 10 hours/week</td></tr>
+<td>R heavy, Tableau as well</td>
+<tr>
+<td><a href="https://www.coursera.org/professional-certificates/ibm-data-analyst-r-excel" target="_blank">
+IBM - Data Analytics with Excel and R Professional Certificate↗&#xFE0E</a></td>
+<td>identical to the Python Version, except with R</td>
+<td>3 months at 10 hours/week(why shorter?)</td>
+<td>thinking I can potentially supplement?</td>
+</tr>
+<tr>
+<td><a href="https://www.coursera.org/specializations/data-visualization" target="_blank">UC Davis - Data Visualization with Tableau Specialization↗&#xFE0E</a></td>
+<td>this is all Tableau</td>
+<td>1 month at 10 hours/week</td>
+</tr></table>
+<p>
+That seems like a pretty good base. From there, it seems like the next step would be to supplement with various options if I feel I've not got a good enough picture. I think it also makes sense to direct my attention towards building a portfolio.</p><p>
+Here is a list ofsupplemental topics in Data Analysis on Coursera:</p><p>
+<table>
+<td>:<a href="https://www.coursera.org/specializations/excel-mysql" target="_blank">Excel to MySQL: Analytic Techniques for Business Specialization↗&#xFE0E</a></td>
+<td>6 months at 5 hours/week</td>
+<td>Excel and SQL, portfolio project?</td>
+</tr>
+
+</table></p><p>
+I've made a few initial choices which is to prioritize Tableau over Power BI (because I'm not sure I want to get into the Azure toolchain, though I'm sure there's some sort of quickstart for those learning), and at this point, I still can't tell whether or not I'm going to prioritize Python over R (though I'm leaning that way), as it seems that both are quite standard tools in analytics.
+</p></article>
+
 <article id="first-post">
 <h2><a href="#first-post">Data Analytics?</a></h2>
 <margin><a href="#tag-meta"><tag>data</tag></a><br>
@@ -44,12 +86,14 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 <article id="tag-meta">
 <h2><a href="#tag-meta">
 tag: meta</a></h2><p>
+<a href="#courses">A Look at Introductory Courses</a>
 <a href="#first-post">Data Analytics?</a><br>
 </p></article>
 
 <article id="chronology">
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
+<date>23-09-06<br></date><a href="#courses">A Look at Introductory Courses</a><br>
 <date>23-09-05<br></date><a href="#first-post">Data Analytics?</a></p>
 </article>
 
