completed intro courses post

--- a/data.html
+++ b/data.html
@@ -14,41 +14,47 @@
 
 <section id="all"><br>
 
-<article id="courses">
-<h2><a href="#courses">A Look at Introductory Courses</a></h2>
+<article id="intro-courses">
+<h2><a href="#intro-courses">A Look at Introductory Courses</a></h2>
 <margin><a href="#tag-meta"><tag>data</tag></a><br>
 <date>23-09-06 17:56</date></margin><p>
 So... what to learn? How to go about it? It seems that the spot to start is at the beginning.</p><p>
 Here is a (hand-picked) list of entry-level specializations in Data Analysis on Coursera:</p><p>
 <a href="https://www.coursera.org/professional-certificates/ibm-data-analyst" target="_blank">
-IBM - Data Analyst Professional Certificate↗&#xFE0E</a><br>
+<b>IBM - Data Analyst Professional Certificate</b>↗&#xFE0E</a><br>
 4 months at 10 hours/week<br>
 Python heavy, Excel, Cognos, SQL<br></p><p>
 
 <a href="https://www.coursera.org/professional-certificates/google-data-analytics" target="_blank">
-Google - Data Analytics Professional Certificate↗&#xFE0E</a><br>
+<b>Google - Data Analytics Professional Certificate</a></b>↗&#xFE0E</a><br>
 6 months at 10 hours/week<br>
 R heavy, Tableau as well<br></p><p>
 
 <a href="https://www.coursera.org/professional-certificates/ibm-data-analyst-r-excel" target="_blank">
-IBM - Data Analytics with Excel and R Professional Certificate↗&#xFE0E</a><br>
+<b>IBM - Data Analytics with Excel and R Professional Certificate</b>↗&#xFE0E</a><br>
 identical to the Python Version, except with R<br>
 3 months at 10 hours/week(why shorter?)<br>
-thinking I can potentially supplement?<br>
+thinking I can potentially supplement?</p><p>
 
-<a href="https://www.coursera.org/specializations/data-visualization" target="_blank">UC Davis - Data Visualization with Tableau Specialization↗&#xFE0E</a><br>
+<a href="https://www.coursera.org/specializations/data-visualization" target="_blank"><b>UC Davis - Data Visualization with Tableau Specialization</b>↗&#xFE0E</a><br>
 this is all Tableau<br>
-1 month at 10 hours/week<br>
+1 month at 10 hours/week<br></p><p>
 
-<p>
 That seems like a pretty good base. From there, it seems like the next step would be to supplement with various options if I feel I've not got a good enough picture. I think it also makes sense to direct my attention towards building a portfolio.</p><p>
-Here is a list ofsupplemental topics in Data Analysis on Coursera:</p><p>
+Here are some ideas for supplements:</p><p>
 
-<a href="https://www.coursera.org/specializations/excel-mysql" target="_blank">Excel to MySQL: Analytic Techniques for Business Specialization↗&#xFE0E</a><br>
+<a href="https://www.coursera.org/specializations/excel-mysql" target="_blank"><b>Excel to MySQL: Analytic Techniques for Business Specialization</b>↗&#xFE0E</a><br>
 6 months at 5 hours/week<br>
-Excel and SQL, portfolio project?</p><p><br>
+Excel and SQL, portfolio project?</p><p>
 
-I've made a few initial choices which is to prioritize Tableau over Power BI (because I'm not sure I want to get into the Azure toolchain, though I'm sure there's some sort of quickstart for those learning), and at this point, I still can't tell whether or not I'm going to prioritize Python over R (though I'm leaning that way), as it seems that both are quite standard tools in analytics.
+<a href="https://www.coursera.org/professional-certificates/google-business-intelligence" target="_blank"><b>Google Business Intelligence Professional Certificate</b>↗&#xFE0E</a>"<br>
+could complement analytics curriculum nicely
+2 months at 10 hours/week
+
+I've made a few initial choices which is to prioritize Tableau over Power BI (because I'm not sure I want to get into the Azure toolchain, though I'm sure there's some sort of quickstart for those learning), and at this point, I still can't tell whether or not I'm going to prioritize Python over R (though I'm leaning that way), as it seems that both are quite standard tools in analytics.</p><p>
+
+As it stands, that 560 hours for the foundational coursework (assuming the IBM R course has no overlap), and 200 hours for the supplements. So if I want to get all that done in six months... that's about... 30 hours a week? Yikes.
+
 </p></article>
 
 <article id="first-post">
@@ -81,14 +87,14 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 <article id="tag-meta">
 <h2><a href="#tag-meta">
 tag: meta</a></h2><p>
-<a href="#courses">A Look at Introductory Courses</a>
+<a href="#intro-courses">A Look at Introductory Courses</a>
 <a href="#first-post">Data Analytics?</a><br>
 </p></article>
 
 <article id="chronology">
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
-<date>23-09-06<br></date><a href="#courses">A Look at Introductory Courses</a><br>
+<date>23-09-06<br></date><a href="#intro-courses">A Look at Introductory Courses</a><br>
 <date>23-09-05<br></date><a href="#first-post">Data Analytics?</a></p>
 </article>
 
