--- a/data.html
+++ b/data.html
@@ -48,12 +48,12 @@ Here are some ideas for supplements:</p><p>
 Excel and SQL, portfolio project?</p><p>
 
 <a href="https://www.coursera.org/professional-certificates/google-business-intelligence" target="_blank"><b>Google Business Intelligence Professional Certificate</b>↗&#xFE0E</a>"<br>
-could complement analytics curriculum nicely
-2 months at 10 hours/week
+could complement analytics curriculum nicely<br>
+2 months at 10 hours/week<br></p><p>
 
 I've made a few initial choices which is to prioritize Tableau over Power BI (because I'm not sure I want to get into the Azure toolchain, though I'm sure there's some sort of quickstart for those learning), and at this point, I still can't tell whether or not I'm going to prioritize Python over R (though I'm leaning that way), as it seems that both are quite standard tools in analytics.</p><p>
 
-As it stands, that 560 hours for the foundational coursework (assuming the IBM R course has no overlap), and 200 hours for the supplements. So if I want to get all that done in six months... that's about... 30 hours a week? Yikes.
+As it stands, that 560 hours for the foundational coursework (assuming the IBM R course has no overlap), and 200 hours for the supplements. So if I want to get all that done in six months... that's about... 30 hours a week? Yikes. Even just the Google (R) and IBM (Python) courses alone are 400 hours combined which is still 16 hours per week. That's alot. That's a non-negligible amount of labor to put into something like this. And I've got to maintain things as I go. Woah.
 
 </p></article>
 
