formatting meta tag

--- a/data.html
+++ b/data.html
@@ -87,7 +87,7 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 <article id="tag-meta">
 <h2><a href="#tag-meta">
 tag: meta</a></h2><p>
-<a href="#intro-courses">A Look at Introductory Courses</a>
+<a href="#intro-courses">A Look at Introductory Courses</a><br>
 <a href="#first-post">Data Analytics?</a><br>
 </p></article>
 
