--- a/data.html
+++ b/data.html
@@ -47,13 +47,38 @@ Here are some ideas for supplements:</p><p>
 6 months at 5 hours/week<br>
 Excel and SQL, portfolio project?</p><p>
 
-<a href="https://www.coursera.org/professional-certificates/google-business-intelligence" target="_blank"><b>Google Business Intelligence Professional Certificate</b>↗&#xFE0E</a>"<br>
+<a href="https://www.coursera.org/professional-certificates/google-business-intelligence" target="_blank"><b>Google Business Intelligence Professional Certificate</b>↗&#xFE0E</a><br>
 could complement analytics curriculum nicely<br>
 2 months at 10 hours/week<br></p><p>
 
 I've made a few initial choices which is to prioritize Tableau over Power BI (because I'm not sure I want to get into the Azure toolchain, though I'm sure there's some sort of quickstart for those learning), and at this point, I still can't tell whether or not I'm going to prioritize Python over R (though I'm leaning that way), as it seems that both are quite standard tools in analytics.</p><p>
 
-As it stands, that 560 hours for the foundational coursework (assuming the IBM R course has no overlap), and 200 hours for the supplements. So if I want to get all that done in six months... that's about... 30 hours a week? Yikes. Even just the Google (R) and IBM (Python) courses alone are 400 hours combined which is still 16 hours per week. That's alot. That's a non-negligible amount of labor to put into something like this. And I've got to maintain things as I go. Woah.
+As it stands, that 560 hours for the foundational coursework (assuming the IBM R course has no overlap), and 200 hours for the supplements. So if I want to get all that done in six months... that's about... 30 hours a week? Yikes. Even just the Google (R) and IBM (Python) courses alone are 400 hours combined which is still 16 hours per week. That's alot. That's a non-negligible amount of labor to put into something like this. And I've got to maintain things as I go. Woah.</p><p>
+
+Another aspect of data analysis is platform-specific knowledge, and there's many platforms, but outside of the Excel/Python/R/SQL stack above, there is some glaring holes (as of 2023). Here are a few other specializations that show some promise in terms of platform:</p><p>
+
+<a href="https://www.coursera.org/professional-certificates/microsoft-power-bi-data-analyst" target="_blank"><b>Microsoft Power BI Data Analyst Professional Certificate</b>↗&#xFE0E</a>"<br>
+This is the biggest thing missing from the above, Microsoft's visualization suite, alternative to Tableau<br>
+5 months at 10 hours/week</p><p>
+
+<a href="https://www.coursera.org/professional-certificates/sas-programming" target="_blank"><b>SAS Programming Professional Certificate</b>↗&#xFE0E</a><br>
+SAS is another widely used analytics platform<br>
+2 months at 10 hours/week</p><p>
+
+<a href="https://www.coursera.org/specializations/business-analytics" target="_blank"><b>UPenn - Business Analytics Specialization</b>↗&#xFE0E</a>"<br>
+Also seems like an interesting (soft) complement<br>
+1 month at 10 hours/week; pretty quick</p><p>
+
+Not that data science is the goal, because I'm under the impression that you need a degree to get into it, but here are some crunchier specializations in data science that may help round out some theoretical understanding and modeling skills(I think):</p><p>
+
+<a href="https://www.coursera.org/professional-certificates/ibm-data-science" target="_blank"><b>IBM - Data Science Professional Certificate</b>↗&#xFE0E</a>"<br>
+Seems like a good overview of DS, applied python, potential portfolio project?<br>
+5 months at 10 hours/week</p><p>
+
+<a href="https://www.coursera.org/specializations/jhu-data-science" target="_blank">Hopkins - Data Science Specialization↗&#xFE0E</a>"<br>
+the crunchiest listed, R-based, may require stats<br>
+7 months at 10 hours/week, oof<br>
+Actually, the 57 hour R course alone may be something to look into</p><p>
 
 </p></article>
 
