added data science courses

--- a/data.html
+++ b/data.html
@@ -65,20 +65,24 @@ This is the biggest thing missing from the above, Microsoft's visualization suit
 SAS is another widely used analytics platform<br>
 2 months at 10 hours/week</p><p>
 
-<a href="https://www.coursera.org/specializations/business-analytics" target="_blank"><b>UPenn - Business Analytics Specialization</b>↗&#xFE0E</a>"<br>
+<a href="https://www.coursera.org/specializations/business-analytics" target="_blank"><b>UPenn - Business Analytics Specialization</b>↗&#xFE0E</a><br>
 Also seems like an interesting (soft) complement<br>
 1 month at 10 hours/week; pretty quick</p><p>
 
+There's another 320 hours on the secondary supplemental work.</p><p>
+ 
 Not that data science is the goal, because I'm under the impression that you need a degree to get into it, but here are some crunchier specializations in data science that may help round out some theoretical understanding and modeling skills(I think):</p><p>
 
-<a href="https://www.coursera.org/professional-certificates/ibm-data-science" target="_blank"><b>IBM - Data Science Professional Certificate</b>↗&#xFE0E</a>"<br>
+<a href="https://www.coursera.org/professional-certificates/ibm-data-science" target="_blank"><b>IBM - Data Science Professional Certificate</b>↗&#xFE0E</a><br>
 Seems like a good overview of DS, applied python, potential portfolio project?<br>
 5 months at 10 hours/week</p><p>
 
-<a href="https://www.coursera.org/specializations/jhu-data-science" target="_blank">Hopkins - Data Science Specialization↗&#xFE0E</a>"<br>
+<a href="https://www.coursera.org/specializations/jhu-data-science" target="_blank"><b>Hopkins - Data Science Specialization</b>↗&#xFE0E</a><br>
 the crunchiest listed, R-based, may require stats<br>
 7 months at 10 hours/week, oof<br>
 Actually, the 57 hour R course alone may be something to look into</p><p>
+
+And another 480 hours on the DS work.
 
 </p></article>
 
