--- a/data.html
+++ b/data.html
@@ -14,6 +14,29 @@
 
 <section id="all"><br>
 
+<article id="ibm-da1-wk1">
+<h2><a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a></h2>
+<margin><a href="#tag-ibm-da1"><tag>ibm-da1</tag></a><br>
+<date>23-09-07 03:53</date></margin><p>
+<h3>Intro</h3></p><p>
+data informs business decisions</p><p>
+data analytics is a highly sought after skill</p><p>
+potential for growth into other data-related careers</p><p>
+<h3>Modern Data Ecosystem</h3></p><p>
+data begets more data</p><p>
+data has to be integrated from disparate sources</p><p>
+data requires diff. types of analysis and skills to generate insights</p><p>
+relies on active stakeholders to collaborate and act on insights</p><p>
+requires tools to analyze</p><p>
+data is either structured or unstructured</p><p>
+first step is to copy the source</p><p>
+reliability, security, and integrity are concerns at this stage</p><p>
+data must be cleaned in order to be analyzed, as well as to comply with regulation (healthcare, biomed, etc.)</p><p>
+data repository -> data management -> users/stakeholders/apps/analysts</p><p>
+challenges at this stage are the interfaces and APIs that users need to get data into the right places</p><p>
+emerging technologies: cloud, ML, Big Data ; all impact analytics
+</p></article>
+
 <article id="intro-courses">
 <h2><a href="#intro-courses">A Look at Introductory Courses</a></h2>
 <margin><a href="#tag-meta"><tag>data</tag></a><br>
@@ -108,6 +131,11 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 </p>
 </article>
 
+<article id="tag-ibm-da1">
+<h2><a href="#tag-ibm-da1">tag: IBM-DA1</a></h2><p>
+<a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a><br>
+</p></article>
+
 <article id="tags">
 <h2><a href="#tags">Tags</a></h2><p>
 <a href="#tag-meta">meta</a><br>
@@ -123,6 +151,7 @@ tag: meta</a></h2><p>
 <article id="chronology">
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
+<date>23-09-07<br></date><a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a><br>
 <date>23-09-06<br></date><a href="#intro-courses">A Look at Introductory Courses</a><br>
 <date>23-09-05<br></date><a href="#first-post">Data Analytics?</a></p>
 </article>
