--- a/data.html
+++ b/data.html
@@ -37,6 +37,8 @@ challenges at this stage are the interfaces and APIs that users need to get data
 emerging technologies: cloud, ML, Big Data ; all impact analytics
 </p></article>
 
+<article>left off here:https://www.coursera.org/learn/introduction-to-data-analytics/lecture/ZyoZ9/key-players-in-the-data-ecosystem</article>
+
 <article id="intro-courses">
 <h2><a href="#intro-courses">A Look at Introductory Courses</a></h2>
 <margin><a href="#tag-meta"><tag>data</tag></a><br>
