--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <br><br>
 <body>
-<front>
+<front></p><p>
+I'm Ryan.
 <p>
-now:</p></p><p>
+I'm currently:</p></p><p>
 <p>
 learning <a href="/data.html#chronology">data analytics</a></p>
 <p>
@@ -19,7 +20,7 @@ working in audio + video <a href="https://tone.support/">post-production</a></p>
 <p>
 <a href="https://501.design">consulting</a> for non-profits</p><p>
 
-<a href="mailto:ryantkessler@pm.me">contact</a>
+<a href="mailto:ryantkessler@pm.me">reach out</a>
 </front>
 </body>
 
