added beginner tips post

--- a/data.html
+++ b/data.html
@@ -14,6 +14,79 @@
 
 <section id="all"><br>
 
+<article id="beginner-analyst-tips">
+<h2><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a></h2>
+<margin><a href="#tag-tips"><tag>tips</tag></a><br>
+<date>23-09-07 20:20</date></margin><p>
+<a href="https://www.youtube.com/watch?v=s6dMWzZKjTs" target="_blank">via↗&#xFE0E</a>:</p><p>
+have a plan - don't just learn things randomly</p><p>
+focus on one thing at a time - don't multitask</p><p>
+be an active learner - try things out yourself</p><p>
+don't just memorize</p><p>
+build stuff!</p><p>
+<a href="https://www.youtube.com/watch?v=mw0LGzIKvoo" target="_blank">via↗&#xFE0E</a>"</p><p>
+engage in deliberate practice</p><p>
+comprehend what the question is asking</p><p>
+deliberate practice requires 100% focus</p><p>
+don't be afraid to step outside of your comfort zone</p><p>
+identify weaknesses and attack them</p><p>
+the key to rapid skill development is that to treat your brain like an athlete's body</p><p>
+manage your energy levels effectively<br>
+&nbsp;sleep<br>
+&nbsp;break up studying into chunks<br>
+&nbsp;exercise - get moving</p><p>
+<a href="https://www.youtube.com/watch?v=jzaz7oH15IU" target="_blank">via↗&#xFE0E</a>"</p><p>
+learn the fundamentals</p><p>
+be engaged</p><p>
+<a href="https://www.youtube.com/watch?v=AYWLZ1lES6g" target="_blank">via↗&#xFE0E</a>"</p><p>
+learn excel</p><p>
+then learn SQL</p><p>
+learn a BI tool</p><p>
+learn python</p><p>
+your first tool won't be your last</p><p>
+get the reps in, practice</p><p>
+excel-practice-online.com</p><p>
+w3schools.com/sql</p><p>
+learnpython.org</p><p>
+you need to practice everyday</p><p>
+get good at searching errors</p><p>
+build your portfolio</p><p>
+if you don't already do something data-related, put together some projects</p><p>
+build up linked in profile</p><p>
+put "data analyst" in your profile as many times as possible</p><p>
+don't quit</p><p>
+all you need is that first job</p><p>
+<a href="https://www.youtube.com/watch?v=CC66RXeTn_4" target="_blank">via↗&#xFE0E</a>"</p><p>
+learn it -> use it</p><p>
+apply it immediately after learning it</p><p>
+learn a technical skill, and complement it with some domain knowledge<br>
+&nbsp;i.e. learn some python, write a blog post about it</p><p>
+develop analytical skills (critical thinking, etc.)</p><p>
+no need to learn the math upfront</p><p>
+read Knaffic - Storytelling with Data</p><p>
+<a href="https://www.youtube.com/watch?v=ZWqH5emDdOI" target="_blank">via↗&#xFE0E</a>"</p><p>
+break goals down into achieveable tasks</p><p>
+focus on one goal at a time</p><p>
+celebrate success</p><p>
+<a href="https://www.youtube.com/watch?v=KKg9ebaLhHE" target="_blank">via↗&#xFE0E</a>"</p><p>
+learn by doing</p><p>
+be qualified -> get some basic knowledge</p><p>
+it's better to be good at something as opposed to basic at everything</p><p>
+learn excel</p><p>
+learn python</p><p>
+learn tableau -> more companies want tableau</p><p>
+you cna make a portfolio fast (how?)</p><p>
+end to end projects are best</p><p>
+use Kaggle for datasets</p><p>
+clean it</p><p>
+create visualiizations</p><p>
+create a dashboard</p><p>
+you can create a portfolio on LinkedIn by putting data analyst on your profile as many times as possible</p><p>
+enable "looking for jobs"</p><p>
+add certifications from coursera</p><p>
+upload projects on Kaggle, and then your Kaggle profile is now your portfolio
+</p></article>
+
 <article id="ibm-da1-wk1">
 <h2><a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a></h2>
 <margin><a href="#tag-ibm-da1"><tag>ibm-da1</tag></a><br>
@@ -133,6 +206,11 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 </p>
 </article>
 
+<article id="tag-tips">
+<h2><a href="#tag-tips">tag: tips</a></h2><p>
+<a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
+</p></article>
+
 <article id="tag-ibm-da1">
 <h2><a href="#tag-ibm-da1">tag: IBM-DA1</a></h2><p>
 <a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a><br>
@@ -153,6 +231,7 @@ tag: meta</a></h2><p>
 <article id="chronology">
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
+<date>23-09-07<br></date><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
 <date>23-09-07<br></date><a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a><br>
 <date>23-09-06<br></date><a href="#intro-courses">A Look at Introductory Courses</a><br>
 <date>23-09-05<br></date><a href="#first-post">Data Analytics?</a></p>
