--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br><br>
 <body>
 <front></p><p>
-I'm Ryan.
+Hi! I'm Ryan.
 <p>
 I'm currently:</p></p><p>
 <p>
@@ -18,7 +18,7 @@ learning <a href="/data.html#chronology">data analytics</a></p>
 <p>
 working in audio + video <a href="https://tone.support/">post-production</a></p><p>
 <p>
-<a href="https://501.design">consulting</a> for non-profits</p><p>
+<a href="https://501.design">consulting</a> in the non-profit space</p><p>
 
 <a href="mailto:ryantkessler@pm.me">reach out</a>
 </front>
