testing side nav

--- a/data.html
+++ b/data.html
@@ -6,7 +6,32 @@
 <link rel="shortcut icon" href="/icons/favicon.ico">
 <link href="/style.css" rel="stylesheet" type="text/css" media="all"></head>
 <body><header>
-<nav><br>
+
+<div id="navigation" style="display:visible"> <!-- NAV SECTION CAN BE HIDDEN -->
+<nav aria-labelledby="table-of-contents">
+<h3>diagrammatics</h3>
+<a href="/data#tags">topics</a><br>
+<a href="/data#chronology">notes</a><br>
+<a href="/data#about">about</a>
+
+<toggle>
+
+<details closed style="display:none"><summary>contents</summary>
+
+<li><details closed><summary>notes</summary>
+    <li><a href="#tags">topical</a></li>
+    <li><a href="#chronological">chronological</a></li>
+</details></details>
+<br><br> <!-- makes sure nav doesn't get hidden by contact footer -->
+</toggle>
+
+<foot>
+<a href="#contact">contact</a></foot>
+</nav>
+
+</div> <!-- closes the navigation wrapper, do not delete -->
+
+<nav style="visibility: hidden"><br>
 <a href="/data#tags">topics</a>&emsp;
 <a href="/data#chronology">notes</a>&emsp;
 <a href="/data#about">about</a>
