--- a/data.html
+++ b/data.html
@@ -7,30 +7,6 @@
 <link href="/style.css" rel="stylesheet" type="text/css" media="all"></head>
 <body><header>
 
-<div id="navigation" style="display:visible"> <!-- NAV SECTION CAN BE HIDDEN -->
-<nav aria-labelledby="table-of-contents">
-<h3>diagrammatics</h3>
-<a href="/data#tags">topics</a><br>
-<a href="/data#chronology">notes</a><br>
-<a href="/data#about">about</a>
-
-<toggle>
-
-<details closed style="display:none"><summary>contents</summary>
-
-<li><details closed><summary>notes</summary>
-    <li><a href="#tags">topical</a></li>
-    <li><a href="#chronological">chronological</a></li>
-</details></details>
-<br><br> <!-- makes sure nav doesn't get hidden by contact footer -->
-</toggle>
-
-<foot>
-<a href="#contact">contact</a></foot>
-</nav>
-
-</div> <!-- closes the navigation wrapper, do not delete -->
-
 <nav style="visibility: hidden"><br>
 <a href="/data#tags">topics</a>&emsp;
 <a href="/data#chronology">notes</a>&emsp;
@@ -273,6 +249,13 @@ I'm learning about data analytics and I'm using this website to document my proc
 </section>
 
 </main>
+
+<navigation>
+<h3>diagrammatics</h3>
+<a href="/data#tags">topics</a><br>
+<a href="/data#chronology">notes</a><br>
+<a href="/data#about">about</a>
+</navigation>
 
 <footer>
 <a href="mailto:ryantkessler@pm.me"><img src="/icons/email-feather.svg" alt="contact" style="width:32px; height:32px"></img></a>
