nope to sidebar for now

--- a/data.html
+++ b/data.html
@@ -6,8 +6,7 @@
 <link rel="shortcut icon" href="/icons/favicon.ico">
 <link href="/style.css" rel="stylesheet" type="text/css" media="all"></head>
 <body><header>
-
-<nav style="visibility: hidden"><br>
+<nav style="visibility: visible"><br>
 <a href="/data#tags">topics</a>&emsp;
 <a href="/data#chronology">notes</a>&emsp;
 <a href="/data#about">about</a>
@@ -257,12 +256,5 @@ I'm learning about data analytics and I'm using this website to document my proc
 </footer>
 
 </body>
-
-<navigation>
-<h3>diagrammatics</h3>
-<a href="/data#tags">topics</a><br>
-<a href="/data#chronology">notes</a><br>
-<a href="/data#about">about</a>
-</navigation>
 
 </html>
