--- a/data.html
+++ b/data.html
@@ -216,16 +216,18 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 <a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a><br>
 </p></article>
 
-<article id="tags">
-<h2><a href="#tags">Tags</a></h2><p>
-<a href="#tag-meta">meta</a><br>
-</p></article>
-
 <article id="tag-meta">
 <h2><a href="#tag-meta">
 tag: meta</a></h2><p>
 <a href="#intro-courses">A Look at Introductory Courses</a><br>
 <a href="#first-post">Data Analytics?</a><br>
+</p></article>
+
+<article id="tags">
+<h2><a href="#tags">Tags</a></h2><p>
+<a href="#tag-tips">tips</a><br>
+<a href="#tag-ibm-da1">IBM-DA1</a><br>
+<a href="#tag-meta">meta</a><br>
 </p></article>
 
 <article id="chronology">
