--- a/data.html
+++ b/data.html
@@ -10,7 +10,15 @@
 <a href="/data#tags">topics</a>&emsp;
 <a href="/data#chronology">notes</a>&emsp;
 <a href="/data#about">about</a>
-</nav></header><main>
+</nav>
+<sidebar>
+<a href="/data#tags">topics</a><br>
+<a href="/data#chronology">notes</a><br>
+<a href="/data#about">about</a>
+</sidebar>
+
+
+</header><main>
 
 <section id="all"><br>
 
@@ -18,13 +26,13 @@
 <h2><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a></h2>
 <margin><a href="#tag-tips"><tag>tips</tag></a><br>
 <date>23-09-07 20:20</date></margin><p>
-<a href="https://www.youtube.com/watch?v=s6dMWzZKjTs" target="_blank">via↗&#xFE0E</a>:</p><p>
+<a href="https://www.youtube.com/watch?v=s6dMWzZKjTs" target="_blank">via↗&#xFE0E</a></p><p>
 have a plan - don't just learn things randomly</p><p>
 focus on one thing at a time - don't multitask</p><p>
 be an active learner - try things out yourself</p><p>
 don't just memorize</p><p>
 build stuff!</p><p>
-<a href="https://www.youtube.com/watch?v=mw0LGzIKvoo" target="_blank">via↗&#xFE0E</a>"</p><p>
+<a href="https://www.youtube.com/watch?v=mw0LGzIKvoo" target="_blank">via↗&#xFE0E</a></p><p>
 engage in deliberate practice</p><p>
 comprehend what the question is asking</p><p>
 deliberate practice requires 100% focus</p><p>
@@ -35,10 +43,10 @@ manage your energy levels effectively<br>
 &nbsp;sleep<br>
 &nbsp;break up studying into chunks<br>
 &nbsp;exercise - get moving</p><p>
-<a href="https://www.youtube.com/watch?v=jzaz7oH15IU" target="_blank">via↗&#xFE0E</a>"</p><p>
+<a href="https://www.youtube.com/watch?v=jzaz7oH15IU" target="_blank">via↗&#xFE0E</a></p><p>
 learn the fundamentals</p><p>
 be engaged</p><p>
-<a href="https://www.youtube.com/watch?v=AYWLZ1lES6g" target="_blank">via↗&#xFE0E</a>"</p><p>
+<a href="https://www.youtube.com/watch?v=AYWLZ1lES6g" target="_blank">via↗&#xFE0E</a></p><p>
 learn excel</p><p>
 then learn SQL</p><p>
 learn a BI tool</p><p>
@@ -56,7 +64,7 @@ build up linked in profile</p><p>
 put "data analyst" in your profile as many times as possible</p><p>
 don't quit</p><p>
 all you need is that first job</p><p>
-<a href="https://www.youtube.com/watch?v=CC66RXeTn_4" target="_blank">via↗&#xFE0E</a>"</p><p>
+<a href="https://www.youtube.com/watch?v=CC66RXeTn_4" target="_blank">via↗&#xFE0E</a></p><p>
 learn it -> use it</p><p>
 apply it immediately after learning it</p><p>
 learn a technical skill, and complement it with some domain knowledge<br>
@@ -64,11 +72,11 @@ learn a technical skill, and complement it with some domain knowledge<br>
 develop analytical skills (critical thinking, etc.)</p><p>
 no need to learn the math upfront</p><p>
 read Knaffic - Storytelling with Data</p><p>
-<a href="https://www.youtube.com/watch?v=ZWqH5emDdOI" target="_blank">via↗&#xFE0E</a>"</p><p>
+<a href="https://www.youtube.com/watch?v=ZWqH5emDdOI" target="_blank">via↗&#xFE0E</a></p><p>
 break goals down into achieveable tasks</p><p>
 focus on one goal at a time</p><p>
 celebrate success</p><p>
-<a href="https://www.youtube.com/watch?v=KKg9ebaLhHE" target="_blank">via↗&#xFE0E</a>"</p><p>
+<a href="https://www.youtube.com/watch?v=KKg9ebaLhHE" target="_blank">via↗&#xFE0E</a></p><p>
 learn by doing</p><p>
 be qualified -> get some basic knowledge</p><p>
 it's better to be good at something as opposed to basic at everything</p><p>
