body relative to sidebar pos

--- a/data.html
+++ b/data.html
@@ -13,14 +13,14 @@
 </sidebar>
 
 <body><header>
-<nav style="visibility: visible"><br>
+<nav style="visibility: hidden"><br>
 <a href="/data#tags">topics</a>&emsp;
 <a href="/data#chronology">notes</a>&emsp;
 <a href="/data#about">about</a>
 </nav>
 </header><main>
 
-<section id="all"><br>
+<section id="all">
 
 <article id="beginner-analyst-tips">
 <h2><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a></h2>
