--- a/data.html
+++ b/data.html
@@ -12,13 +12,7 @@
 <a href="/data#about">about</a>
 </sidebar>
 
-<body><header>
-<nav style="visibility: hidden"><br>
-<a href="/data#tags">topics</a>&emsp;
-<a href="/data#chronology">notes</a>&emsp;
-<a href="/data#about">about</a>
-</nav>
-</header><main>
+<body><main>
 
 <section id="all">
 
