--- a/data.html
+++ b/data.html
@@ -7,6 +7,10 @@
 <link href="/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
 <sidebar>
+Now:<br>
+<a href="/data#ibm-da1">IBM DA 1</a>
+
+<br><br>
 <a href="/data#tags">topics</a><br>
 <a href="/data#chronology">notes</a><br>
 <a href="/data#about">about</a>
@@ -91,7 +95,7 @@ upload projects on Kaggle, and then your Kaggle profile is now your portfolio
 
 <article id="ibm-da1-wk1">
 <h2><a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a></h2>
-<margin><a href="#tag-ibm-da1"><tag>ibm-da1</tag></a><br>
+<margin><a href="#ibm-da1"><tag>ibm-da1</tag></a><br>
 <date>23-09-07 03:53</date></margin><p>
 <h3>Intro</h3></p><p>
 data informs business decisions</p><p>
@@ -213,9 +217,9 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 <a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
 </p></article>
 
-<article id="tag-ibm-da1">
-<h2><a href="#tag-ibm-da1">tag: IBM-DA1</a></h2><p>
-<a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a><br>
+<article id="ibm-da1">
+<h2><a href="#ibm-da1">Course: IBM - Intro to Data Analytics</a></h2><p>
+<a href="#ibm-da1-wk1">Week 1</a><br>
 </p></article>
 
 <article id="tag-meta">
@@ -228,7 +232,7 @@ tag: meta</a></h2><p>
 <article id="tags">
 <h2><a href="#tags">Tags</a></h2><p>
 <a href="#tag-tips">tips</a><br>
-<a href="#tag-ibm-da1">IBM-DA1</a><br>
+<a href="#ibm-da1">IBM-DA1</a><br>
 <a href="#tag-meta">meta</a><br>
 </p></article>
 
@@ -236,7 +240,7 @@ tag: meta</a></h2><p>
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
 <date>23-09-07<br></date><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
-<date>23-09-07<br></date><a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a><br>
+<date>23-09-07<br></date><a href="#ibm-da1-wk1">IBM - Intro to Data Analytics: Week 1</a><br>
 <date>23-09-06<br></date><a href="#intro-courses">A Look at Introductory Courses</a><br>
 <date>23-09-05<br></date><a href="#first-post">Data Analytics?</a></p>
 </article>
