key players added

--- a/data.html
+++ b/data.html
@@ -113,10 +113,78 @@ reliability, security, and integrity are concerns at this stage</p><p>
 data must be cleaned in order to be analyzed, as well as to comply with regulation (healthcare, biomed, etc.)</p><p>
 data repository -> data management -> users/stakeholders/apps/analysts</p><p>
 challenges at this stage are the interfaces and APIs that users need to get data into the right places</p><p>
-emerging technologies: cloud, ML, Big Data ; all impact analytics
+emerging technologies: cloud, ML, Big Data ; all impact analytics</p><p>
+orgs use data to uncover opportunities and apply that understanding to differentiate themselves</p><p>
+data professionals</p><p>
+<h3>Key Players in Data Ecosystem</h3></p><p>
+<ul>
+</li><li>
+Data Engineers -> extract, integrate and organize data from disaparate sources<br>
+clean, transform, + prepare data<br>
+design, store, and manage data repositories<br>
+good understanding of programming, systems + tech architectures, in-depth understanding of relational databases and non-relational data stores</li><li>
+Data Analysts -> translares data into plain english so stakeholders can make decisions<br>
+inspect + clean data for deriving insights<br>
+find correlations, patterns, and apply statistical methods<br>
+visualize data to interpret and present findings of analysis<br>
+they answer questions<br>
+require good knowledge of spreadsheets and statistical tools to create charts and dashboards<br>
+need some programming skills<br>
+strong-analytical and storytelling skiils</li><li>
+Data Scientists -> analyze data for actionable insights<br>
+create predicitve models using machine leaarning<br>
+answer predective/anticipative modelling-oriented questions<br>
+must know math and stats<br>
+must have domain knowledge</li><li>
+Business Analysts -> leverage the work of data analysts and data scientists to look at possible implications of actions they need to take</li><li>
+BI Analysts -> focus on market forces and external influences that shape the business<br>
+organize and monitor data on different business functions<br>
+explore data to extract actionables</li></ul></p><p>
+<h3>Defining Data Analysis</h3></p><p>
+-> finding patterns and correlations to draw conclusions about past performance and future actions</p><p>
+types:<ul></li><li>
+descriptive analytics -> what happened</li><li>
+diagnostic analytics -> why did it happen</li><li>
+predictive analytics -> what will happen next</li><li>
+prescriptive analytics -> what should be done about it</li></ul></p><p>
+DA -></p><p><ul><li>
+understanding the problem adn desired result</li><li>
+setting a clear metric</li><li>
+gathering data</li><li>
+cleaning data</li><li>
+analyzing and mining data</li><li>
+interpreting results</li><li>
+presenting your findings</li><ul></p><p>
+
+
+
 </p></article>
 
-<article>left off here:https://www.coursera.org/learn/introduction-to-data-analytics/lecture/ZyoZ9/key-players-in-the-data-ecosystem</article>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <article id="intro-courses">
 <h2><a href="#intro-courses">A Look at Introductory Courses</a></h2>
