--- a/data.html
+++ b/data.html
@@ -90,8 +90,24 @@ create a dashboard</p><p>
 you can create a portfolio on LinkedIn by putting data analyst on your profile as many times as possible</p><p>
 enable "looking for jobs"</p><p>
 add certifications from coursera</p><p>
-upload projects on Kaggle, and then your Kaggle profile is now your portfolio
-</p></article>
+upload projects on Kaggle, and then your Kaggle profile is now your portfolio</p><p>
+<a href="https://www.youtube.com/watch?v=XYKuslcJp7A" target="_blank">via↗&#xFE0E</a>"</p><p>
+putting together a portfolio</p><p>
+do an exploratory data analysis (EDA) project</p><p>
+do a visualization project</p><p>
+do a collaboration project</p><p>
+do an explainer/blog post project</p><p>
+you can either find a data set first and then start on the project, or let the project dictate which datasets you want to work with</p><p>
+these projects are less about the complexity of the data, and more about being able to tell engaging stories with them</p><p>
+using unique data can help you stand out</p><p>
+web scraping (lots of python packages for this) can help you create your won datasets</p><p>
+projects that demonstarte skiill in data cleaning is important</p><p>
+you can also use public APIs to develop unique datasets</p><p>
+check out awesome-public-datasets on GH</p><p>
+The Pudding is an interesting site for data journalism</p><p>
+regardless of the project, perfect the visuals</p><p>
+interactive visualizations help portfolio projects shine</p>
+</article>
 
 <article id="ibm-da1-wk1">
 <h2><a href="#ibm-da1-wk1">IBM Introduction to Data Analytics: Week 1</a></h2>
@@ -155,6 +171,10 @@ cleaning data</li><li>
 analyzing and mining data</li><li>
 interpreting results</li><li>
 presenting your findings</li><ul></p><p>
+<h3>"analysis" vs. "analytics"?<h3></p><p>
+Analysis - detailed examination of the elements or structure of something</p><p>
+Analytics - the systematic computational analysis of data or statistics</p><p>
+
 
 
 
@@ -297,6 +317,13 @@ tag: meta</a></h2><p>
 <a href="#first-post">Data Analytics?</a><br>
 </p></article>
 
+
+
+<article id="unlisted">
+<h2><a href="#tag-unlisted">tag: Unlisted</a></h2><p>
+<a href="#profiles">Profiles</a>
+</p></article>
+
 <article id="tags">
 <h2><a href="#tags">Tags</a></h2><p>
 <a href="#tag-tips">tips</a><br>
@@ -307,6 +334,7 @@ tag: meta</a></h2><p>
 <article id="chronology">
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
+<date>23-09-09<br></date><a href="#profiles">Profiles</a><br>
 <date>23-09-07<br></date><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
 <date>23-09-07<br></date><a href="#ibm-da1-wk1">IBM - Intro to Data Analytics: Week 1</a><br>
 <date>23-09-06<br></date><a href="#intro-courses">A Look at Introductory Courses</a><br>
@@ -321,12 +349,31 @@ I'm learning about data analytics and I'm using this website to document my proc
 </p>
 </article>
 
+<article id="profiles">
+<h2><a href="#profiles">
+Profiles</a></h2><p>
+<a href="https://github.com/diagrammatics" target="_blank">GitHub↗&#xFE0E</a>"</p><p>
+<a href="https://www.kaggle.com/diagrammatics" target="_blank">Kaggle↗&#xFE0E</a>"</p><p>
+<a href="https://www.data.world/diagrammatics" target="_blank">Data.World↗&#xFE0E</a>"</p><p>
+<a href="https://www.codewars.com/users/diagrammatics" target="_blank">Codewars↗&#xFE0E</a>"</p><p>
+
+</p>
+</article>
+
+
+<article id="contact">
+<h2><a href="#contact">
+Contact</a></h2><p>
+email: diagdata at [pm dot me]
+</p>
+</article>
+
 </section>
 
 </main>
 
 <footer>
-<a href="mailto:ryantkessler@pm.me"><img src="/icons/email-feather.svg" alt="contact" style="width:32px; height:32px"></img></a>
+<a href="/data.html#contact"><img src="/icons/email-feather.svg" alt="contact" style="width:32px; height:32px"></img></a>
 <a href="https://github.com/diagrammatics"><img src="/icons/github-feather.svg" alt="github" style="width:32px; height:32px"></img></a>
 
 </footer>
