--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ working in audio + video <a href="https://tone.support/">post-production</a></p>
 <p>
 <a href="https://501.design">consulting</a> in the non-profit space</p><p>
 
-<a href="mailto:ryantkessler@pm.me">reach out</a>
+<a href="/data.html#contact">reach out</a>
 </front>
 </body>
 
